--- a/frontend/src/patterns/styles/css/patternModal.css
+++ b/frontend/src/patterns/styles/css/patternModal.css
@@ -18,7 +18,6 @@
 .row-label {
     display: flex;
     grid-column: 1;
-    /* Place the label in the first column */
     text-align: center;
     font-weight: bold;
     padding: 10px;
@@ -27,7 +26,6 @@
 .grid-button {
     padding: 10px;
     background-color: #ddd;
-    /* Default background color */
     border: 1px solid #ccc; 
     cursor: pointer;
     transition: .5s;
@@ -35,7 +33,6 @@
 
 .grid-button.active {
     background-color: #4CAF50;
-    /* Active button background */
     color: white;
 }
 
@@ -57,7 +54,7 @@ button {
     color: #006D77;
 }
 
-/* Title and uploader styling */
+
 .title {
     text-align: center;
     font-family: "Raleway", sans-serif;
@@ -73,5 +70,9 @@ button {
 }
 
 .uploader {
+    font-size: large;
+}
+
+.createdat {
     font-size: large;
 }
