--- a/frontend/src/patterns/patternsearch/show-results.css
+++ b/frontend/src/patterns/patternsearch/show-results.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-
 .result-title {
     margin: 8px 0;
     margin-left: 24px;
@@ -10,6 +8,14 @@
     font-style: normal;
     cursor: default;
     color: rgba(255, 255, 255, .5);
+}
+
+.no-results {
+    margin: 12px;
+    font-family: "Inconsolata", serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .pattern-list-container {
