--- a/frontend/src/patterns/patternlist/pattern-buttons.css
+++ b/frontend/src/patterns/patternlist/pattern-buttons.css
@@ -2,14 +2,13 @@
     transition: all .5s;
     display: flex;
     justify-content: space-between;
-    border: white 1px solid;
 }
 
 .back-button {
     transition: all .5s;
     background-color: transparent;
     color: #ff00c1;
-    margin: 8px;
+    margin: 0 24px 12px 24px;
     height: 38px;
     width: 56px;
     border: rgba(200, 200, 200, .4) 1px solid;
