--- a/frontend/src/patterns/patternlist/pattern-list.css
+++ b/frontend/src/patterns/patternlist/pattern-list.css
@@ -1,7 +1,10 @@
 .list-container {
     margin: 24px;
-    border: white 1px solid;
-    
+    padding-bottom: 12px;
+    border-radius: 24px;
+    box-shadow: 
+        0 0 5px #231942,
+        0 0 10px #5e548e
 }
 
 .list-grid-mobile {
