--- a/frontend/src/patterns/patterncreate/pattern-create.css
+++ b/frontend/src/patterns/patterncreate/pattern-create.css
@@ -7,12 +7,12 @@
 }
 
 .create-container {
-    border: black 1px solid;
     display: flex;
     justify-content: space-around;
 }
 
-.button-alone {
+.button-create {
+    transition: all 1s;
     border: 2px solid transparent;
     padding: 12px 24px;
     border-radius: 24px;
@@ -20,4 +20,11 @@
     linear-gradient(127deg, rgba(231,2,197,1) 0%, rgba(99,1,249,1) 32%, rgba(0,212,255,1) 100%);
     background-origin: border-box;
     background-clip: padding-box, border-box;
+}
+
+.button-create:hover {
+    cursor: pointer;
+   box-shadow: 
+   0 0 5px #231942,
+   0 0 10px #5e548e
 }
